k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: dinenit-api-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP  # Change to LoadBalancer if needed
